[gd_scene load_steps=8 format=2]

[ext_resource path="res://polygon_canvas/polygon_canvas.gd" type="Script" id=1]
[ext_resource path="res://polygon_canvas/mask_canvas.gd" type="Script" id=2]

[sub_resource type="CanvasItemMaterial" id=4]
blend_mode = 4

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;

uniform sampler2D mask_a;
uniform sampler2D mask_b;
uniform vec4 color_a: hint_color;
uniform vec4 color_b: hint_color;
uniform vec4 color_ab: hint_color;

void fragment() {
	float a = texture(mask_a, UV).r;
	float b = texture(mask_b, UV).r;
	float ab = trunc((a + b) / 2.0);
	vec4 color = vec4(0);
	color = mix(color, color_a, a);
	color = mix(color, color_b, b);
	color = mix(color, color_ab, ab);
	COLOR = color;
}"

[sub_resource type="ViewportTexture" id=5]
viewport_path = NodePath("MaskViewportA")

[sub_resource type="ViewportTexture" id=6]
viewport_path = NodePath("MaskViewportB")

[sub_resource type="ShaderMaterial" id=2]
resource_local_to_scene = true
shader = SubResource( 1 )
shader_param/color_a = Color( 1, 0, 0, 1 )
shader_param/color_b = Color( 0, 0, 1, 1 )
shader_param/color_ab = Color( 0, 1, 0, 1 )
shader_param/mask_a = SubResource( 5 )
shader_param/mask_b = SubResource( 6 )

[node name="PolygonCanvas" type="Node2D"]
material = SubResource( 4 )
script = ExtResource( 1 )

[node name="MaskViewportA" type="Viewport" parent="."]
size = Vector2( 600, 500 )
render_target_v_flip = true
render_target_update_mode = 3

[node name="MaskCanvas" type="ColorRect" parent="MaskViewportA"]
margin_right = 600.0
margin_bottom = 500.0
color = Color( 0, 0, 0, 1 )
script = ExtResource( 2 )

[node name="MaskViewportB" type="Viewport" parent="."]
size = Vector2( 600, 500 )
render_target_v_flip = true
render_target_update_mode = 3

[node name="MaskCanvas" type="ColorRect" parent="MaskViewportB"]
margin_right = 600.0
margin_bottom = 500.0
color = Color( 0, 0, 0, 1 )
script = ExtResource( 2 )
mouse_button = 2

[node name="Combination" type="ColorRect" parent="."]
material = SubResource( 2 )
margin_right = 600.0
margin_bottom = 500.0
__meta__ = {
"_edit_use_anchors_": false
}
